force-app/main/default/objects/PMC_DH_Preference_Notification__mdt/PMC_DH_Preference_Notification__mdt.object-meta.xml
<CustomObject>
    <label>PMC DH Preference Notification</label>
    <pluralLabel>PMC DH Preference Notifications</pluralLabel>
</CustomObject>