force-app/main/default/objects/PMC_DH_Preference_Notification__mdt/fields/PMC_DH_Default_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Default_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Opt In</label>
    <type>Checkbox</type>
</CustomField>