force-app/main/default/objects/PMC_DH_Preference_Notification__mdt/fields/PMC_DH_Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Notification_Type__c</fullName>
    <label>Notification Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>