force-app/main/default/objects/PMC_DH_Preference_Notification__mdt/fields/PMC_DH_Preferences__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Preferences__c</fullName>
    <label>Preferences</label>
    <length>255</length>
    <type>Text</type>
</CustomField>